--- a/css/styles.css
+++ b/css/styles.css
@@ -19,11 +19,11 @@ body {
   background-color: var(--white-background-color);
 }
 
-a {
+.link {
   text-decoration: none;
 }
 
-ul {
+.list {
   list-style: none;
 }
 
@@ -44,18 +44,20 @@ button {
   font-size: 18px;
   line-height: 1.17;
   font-weight: 800;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--navy-blue-color);
+  color: var(--primary-brand-color);
 }
 
-.logo .accent {
-  color: var(--primary-brand-color);
+.logo .brand-color {
+  color: var(--navy-blue-color);
 }
 
 .navigate-list .link {
   font-size: 16px;
   line-height: 1.5;
   font-weight: 500;
+  letter-spacing: 0.02em;
   color: var(--navy-blue-color);
 }
 
@@ -64,10 +66,14 @@ button {
   color: var(--pressed-state-color);
 }
 
+.address {
+  font-style: normal;
+}
+
 .address .link {
   font-size: 16px;
   line-height: 1.5;
-  font-style: normal;
+  letter-spacing: 0.02em;
   color: var(--primary-text-color);
 }
 
@@ -87,19 +93,23 @@ button {
 .hero .title {
   font-size: 56px;
   line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
   color: var(--white-background-color);
 }
 
 .hero .btn {
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 500;
+  letter-spacing: 0.04em;
   color: var(--white-background-color);
   background-color: var(--primary-brand-color);
 }
 
 .hero .btn:hover,
-.hero .bt:focus {
+.hero .btn:focus {
   background-color: var(--pressed-state-color);
 }
 
@@ -107,36 +117,54 @@ button {
   font-size: 20px;
   line-height: 1.2;
   font-weight: 500;
+  letter-spacing: 0.02em;
   color: var(--navy-blue-color);
 }
 
 .benefits .text {
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .todo .title {
   font-size: 36px;
   line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
   color: var(--navy-blue-color);
+}
+
+.our-team {
+  background-color: var(--light-color);
 }
 
 .our-team .title {
   font-size: 36px;
   line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
   color: var(--navy-blue-color);
+}
+
+.our-team .item {
+  background-color: var(--white-background-color);
 }
 
 .our-team .subtitle {
   font-size: 20px;
   line-height: 1.2;
   font-weight: 500;
+  letter-spacing: 0.02em;
   color: var(--navy-blue-color);
 }
 
 .our-team .text {
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .footer {
@@ -144,19 +172,26 @@ button {
 }
 
 .footer .logo {
-  color: var(--accent-color);
+  color: var(--primary-brand-color);
+}
+
+.footer .brand-color {
+  color: var(--light-color);
 }
 
 .footer .text {
   font-size: 16px;
   line-height: 1.5;
-  color: var(--accent-color);
+  letter-spacing: 0.02em;
+  color: var(--light-color);
 }
 
 .filter .btn {
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 500;
+  letter-spacing: 0.04em;
   color: var(--primary-brand-color);
   background-color: var(--light-color);
 }
