--- a/css/styles.css
+++ b/css/styles.css
@@ -32,11 +32,7 @@ button {
 }
 
 .hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  visibility: hidden;
 }
 
 .logo {
